--- a/index.html
+++ b/index.html
@@ -1489,7 +1489,7 @@ function IntelPage({ darkMode, onAdvertise, embedded = false }) {
   return (
     <div className={embedded ? '' : 'max-w-6xl mx-auto px-4 py-8'}>
       {/* HERO */}
-      <section className={`text-center ${embedded ? 'py-6 md:py-10' : 'py-12 md:py-20'}`}
+      <section className={`text-center ${embedded ? 'py-6 md:py-10' : 'py-12 md:py-20'}`}>
         <div className={`inline-flex items-center gap-2 px-4 py-1.5 rounded-full text-xs font-semibold tracking-wide mb-6 ${darkMode ? 'bg-lime-400/10 text-lime-400 border border-lime-400/20' : 'bg-lime-50 text-lime-700 border border-lime-200'}`}>
           <svg className="w-3.5 h-3.5" fill="currentColor" viewBox="0 0 20 20"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fillRule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clipRule="evenodd"/></svg>
           RESEARCH · {cardIntelData.length} CARDS ANALYZED
