--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <meta name="twitter:description" content="Compare 70+ crypto debit cards. Find the best USDC cards, Bitcoin cards, and stablecoin spending cards with up to 15% cashback.">
   <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/og-card-v2/public">
 
-  <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' stop-color='%2314B8A6'/%3E%3Cstop offset='100%25' stop-color='%230F766E'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='4' y='8' width='40' height='32' rx='6' fill='url(%23g)'/%3E%3Crect x='10' y='16' width='12' height='9' rx='2' fill='rgba(255,255,255,0.3)'/%3E%3Cpath d='M20 34 C24 29 31 27 36 25 C29 28 27 32 29 35 C32 31 36 28 40 27' stroke='white' stroke-width='3' stroke-linecap='round' fill='none' opacity='0.95'/%3E%3C/svg%3E">
 
   <!-- Structured Data - Organization -->
   <script type="application/ld+json">
@@ -1933,16 +1933,19 @@ function Header({ activeView, navigateTo, onSubscribe, darkMode, setDarkMode, se
       <div className="max-w-6xl mx-auto px-4 py-3">
         <div className="flex items-center justify-between gap-4">
           {/* Logo - navigates to home */}
-          <button onClick={() => handleNavClick('cards')} className="flex-shrink-0">
-            <img
-              src={darkMode
-                ? "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/135aa8ee-6c5c-4779-7f78-cfbffb724600/public"
-                : "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/bf8b9a1c-ce8b-49da-48d1-027b873f3300/public"
-              }
-              alt="Spendbase"
-              className={darkMode ? "h-10 md:h-14" : "h-16 md:h-24"}
-              style={{ objectFit: 'contain' }}
-            />
+          <button onClick={() => handleNavClick('cards')} className="flex-shrink-0 flex items-center gap-2">
+            <svg viewBox="0 0 48 48" className="h-9 md:h-11 w-auto">
+              <defs>
+                <linearGradient id="headerLogoGrad" x1="0%" y1="0%" x2="100%" y2="100%">
+                  <stop offset="0%" stopColor="#14B8A6"/>
+                  <stop offset="100%" stopColor="#0F766E"/>
+                </linearGradient>
+              </defs>
+              <rect x="4" y="8" width="40" height="32" rx="6" fill="url(#headerLogoGrad)"/>
+              <rect x="10" y="16" width="12" height="9" rx="2" fill="rgba(255,255,255,0.3)"/>
+              <path d="M20 34 C24 29 31 27 36 25 C29 28 27 32 29 35 C32 31 36 28 40 27" stroke="white" strokeWidth="3" strokeLinecap="round" fill="none" opacity="0.95"/>
+            </svg>
+            <span className={`text-xl md:text-2xl font-bold ${darkMode ? 'text-white' : 'text-gray-900'}`}>Spendbase</span>
           </button>
 
           {/* Search Bar - visible only on cards view, hidden on mobile */}
