SEO: Add routes for research/blog/funding/ratings, SPA redirects, updated sitemap

--- a/index.html
+++ b/index.html
@@ -6435,12 +6435,15 @@ const VIEW_TO_PATH = {
   learn: '/learn',
   rewards: '/rewards',
   wizard: '/find-my-card',
-  ratings: '/scores',
+  ratings: '/ratings',
   intel: '/intel',
   calculator: '/calculator',
   privacy: '/privacy',
   terms: '/terms',
   demo: '/demo',
+  research: '/research',
+  blog: '/blog',
+  funding: '/funding',
 };
 const PATH_TO_VIEW = {};
 Object.entries(VIEW_TO_PATH).forEach(([view, path]) => { PATH_TO_VIEW[path] = view; });
