fix: resolve all SEO audit issues — meta tags, sitemap, prod React

--- a/card/crypto-com/index.html
+++ b/card/crypto-com/index.html
@@ -22,7 +22,7 @@
   <meta name="twitter:title" content="Crypto.com — Crypto Card Review | Spendbase">
   <meta name="twitter:description" content="Compare Crypto.com: 1-8% cashback, Visa custodial crypto card. See fees, features & rankings on Spendbase.">
   <meta name="twitter:image" content="https://spendbase.cards/og-images/crypto-com.png">
-  <meta name="twitter:site" content="@spendbase">
+  <meta name="twitter:site" content="@spendbasecards">
 
   <!-- Redirect real users to the SPA -->
   <script>fetch('/index.html').then(function(r){return r.text()}).then(function(h){document.open();document.write(h);document.close()});</script>
