--- a/research/index.html
+++ b/research/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Spendbase</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crypto Card Research — Data & Market Analysis | Spendbase</title>
+  <meta name="description" content="In-depth research on the crypto card market — fee analysis, cashback token performance, and spending trends across 70+ cards.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://spendbase.cards/research">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://spendbase.cards/research">
+  <meta property="og:title" content="Crypto Card Research — Data & Market Analysis | Spendbase">
+  <meta property="og:description" content="In-depth research on the crypto card market — fee analysis, cashback token performance, and spending trends across 70+ cards.">
+  <meta property="og:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/og-card-v2/public">
+  <meta property="og:site_name" content="Spendbase">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@spendbasecards">
+  <meta name="twitter:title" content="Crypto Card Research — Data & Market Analysis | Spendbase">
+  <meta name="twitter:description" content="In-depth research on the crypto card market — fee analysis, cashback token performance, and spending trends.">
+  <meta name="twitter:image" content="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/og-card-v2/public">
+  <link rel="icon" type="image/png" href="https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/cc680d90-ee94-499a-2074-50ec819a2000/public">
   <script>
-    sessionStorage.setItem('spa-redirect', window.location.pathname + window.location.search + window.location.hash);
+    sessionStorage.setItem('spa-redirect', '/research');
     window.location.replace('/');
   </script>
 </head>
-<body>Redirecting...</body>
+<body>
+  <h1>Crypto Card Research</h1>
+  <p>In-depth research on the crypto card market — fee analysis, cashback token performance, and spending trends.</p>
+  <p><a href="https://spendbase.cards">← Back to Spendbase</a></p>
+</body>
 </html>
