--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@ const allCards = [
   { id: 116, name: 'Redotpay', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/b922153a-1820-4b73-d743-e9f730d38900/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/b922153a-1820-4b73-d743-e9f730d38900/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/b922153a-1820-4b73-d743-e9f730d38900/public', showBrandName: true, brandNameText: 'RedotPay', xHandle: 'RedotPay', showFrontTags: true, bg: 'redotpay-gradient', silverChip: true, network: 'Visa', category: 'onchain', archetype: 'stablecoin', custody: 'Custodial', chain: 'Multi-chain', regions: ['apac', 'global', 'latam'], cashback: '1%', cashbackToken: 'USD', fxFee: '1.2%', annualFee: '$0', features: ['Credit lines', '1M+ users', 'Global reach', 'USDT focus'], perks: ['Emerging market leader', 'USDT-friendly', 'Low barriers'], website: 'https://www.redotpay.com', platforms: 'both' },
   { id: 122, name: 'Tria', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/391632b3-3d8f-4c34-73cc-c5dfed541a00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/6b009bf7-f9ad-414e-dd25-1173bccb3f00/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/6b009bf7-f9ad-414e-dd25-1173bccb3f00/public', xHandle: 'useTria', showFrontTags: true, bg: 'from-gray-900 to-black', network: 'Visa', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: '0%', annualFee: 'TBD', features: ['Smart wallet', 'Gasless transactions', 'Multi-chain support', 'Social login'], perks: ['Seamless UX', 'Chain abstraction', 'Web3 native'], website: 'https://app.tria.so/', platforms: 'both' },
   { id: 123, name: 'Kontigo', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/67194a7b-3019-4689-ca4a-33e604f90600/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/67194a7b-3019-4689-ca4a-33e604f90600/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/67194a7b-3019-4689-ca4a-33e604f90600/public', brandLogoSize: 'h-10', xHandle: 'kontigo_io', showFrontTags: true, bg: 'from-[#FF6B00] to-[#FF8C00]', network: 'Visa', category: 'onchain', archetype: 'stablecoin', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['europe', 'global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: '0%', annualFee: 'TBD', features: ['Stablecoin spending', 'Non-custodial', 'Multi-chain', 'IBAN support'], perks: ['EU compliant', 'Self-custody', 'Crypto native'], website: 'https://kontigo.io', platforms: 'both' },
-  { id: 124, name: 'OrbitX Neo', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/f5d4447c-9f28-475d-0df0-dc931b5cda00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9dd951bc-8f0c-428a-df11-7efbbc827100/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9dd951bc-8f0c-428a-df11-7efbbc827100/public', xHandle: 'OrbitX_Pay', showFrontTags: true, bg: 'from-gray-900 to-black', network: 'Visa', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], tier: 'Standard', cashback: 'TBD', cashbackToken: 'TBD', fxFee: '2%', annualFee: '$12/year', features: ['Visa Platinum', '0% deposit fees', '$50K daily limit', 'Multi-chain'], perks: ['Entry tier', 'Global coverage', 'Non-custodial'], website: 'https://orbitx.finance', platforms: 'both' },
-  { id: 1241, name: 'OrbitX Lux', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/f5d4447c-9f28-475d-0df0-dc931b5cda00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9dd951bc-8f0c-428a-df11-7efbbc827100/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9dd951bc-8f0c-428a-df11-7efbbc827100/public', xHandle: 'OrbitX_Pay', showFrontTags: true, bg: 'from-gray-900 to-black', network: 'Visa', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], tier: 'Premium', cashback: 'TBD', cashbackToken: 'TBD', fxFee: '1%', annualFee: '$30/year', features: ['Visa Signature', 'Virtual card included', '0% deposit fees', 'Unlimited daily spend'], perks: ['Lowest FX fees', 'Premium tier', 'Non-custodial'], website: 'https://orbitx.finance', platforms: 'both' },
+  { id: 124, name: 'OrbitX Neo', brand: 'OrbitX', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/f5d4447c-9f28-475d-0df0-dc931b5cda00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9dd951bc-8f0c-428a-df11-7efbbc827100/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9dd951bc-8f0c-428a-df11-7efbbc827100/public', xHandle: 'OrbitX_Pay', showFrontTags: true, bg: 'from-gray-900 to-black', network: 'Visa', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], tier: 'Standard', cashback: 'TBD', cashbackToken: 'TBD', fxFee: '2%', annualFee: '$12/year', features: ['Visa Platinum', '0% deposit fees', '$50K daily limit', 'Multi-chain'], perks: ['Entry tier', 'Global coverage', 'Non-custodial'], website: 'https://orbitx.finance', platforms: 'both' },
+  { id: 1241, name: 'OrbitX Lux', brand: 'OrbitX', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/f5d4447c-9f28-475d-0df0-dc931b5cda00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9dd951bc-8f0c-428a-df11-7efbbc827100/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9dd951bc-8f0c-428a-df11-7efbbc827100/public', xHandle: 'OrbitX_Pay', showFrontTags: true, bg: 'from-gray-900 to-black', network: 'Visa', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], tier: 'Premium', cashback: 'TBD', cashbackToken: 'TBD', fxFee: '1%', annualFee: '$30/year', features: ['Visa Signature', 'Virtual card included', '0% deposit fees', 'Unlimited daily spend'], perks: ['Lowest FX fees', 'Premium tier', 'Non-custodial'], website: 'https://orbitx.finance', platforms: 'both' },
   { id: 127, name: 'Gemini', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/c89c9459-b0fb-47ad-5002-0545f9065d00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/7258685c-29fc-40b0-ed22-51b5093a3300/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/7258685c-29fc-40b0-ed22-51b5093a3300/public', xHandle: 'Gemini', showFrontTags: true, bg: 'from-[#F7931A] to-[#E67E00]', silverChip: true, network: 'Mastercard', category: 'exchange', archetype: 'exchange', custody: 'Custodial', chain: 'Multi-chain', regions: ['americas'], cashback: '3%', cashbackToken: 'Crypto', fxFee: '0%', annualFee: '$0', features: ['Up to 3% crypto back', '70+ cryptos', 'No annual fee', 'Regulated'], perks: ['US regulated', 'Winklevoss twins', 'Insurance'], website: 'https://www.gemini.com/credit-card', platforms: 'both' },
-  { id: 129, name: 'Bitget Card', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9f76c4f9-1e82-4856-f4b2-b65b9333c500/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9f76c4f9-1e82-4856-f4b2-b65b9333c500/public', xHandle: 'bitget', showFrontTags: true, bg: 'from-[#00D6E0] to-[#00B8C2]', silverChip: true, network: 'Visa', category: 'exchange', archetype: 'exchange', custody: 'Custodial', chain: 'Multi-chain', regions: ['global'], tier: 'Standard', cashback: 'Up to 4%', cashbackToken: 'BGB', fxFee: '0%', annualFee: '$0', features: ['Crypto to fiat', 'BGB rewards', 'Global coverage', 'No fees'], perks: ['Fast growing exchange', 'Copy trading leader'], token: { ticker: 'BGB', live: true, cmc: 'bitget-token' }, website: 'https://www.bitget.com/cards', platforms: 'both' },
-  { id: 1291, name: 'Bitget Premier', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9f76c4f9-1e82-4856-f4b2-b65b9333c500/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9f76c4f9-1e82-4856-f4b2-b65b9333c500/public', xHandle: 'bitget', showFrontTags: true, bg: 'from-gray-900 to-black', network: 'Visa', category: 'exchange', archetype: 'exchange', custody: 'Custodial', chain: 'Multi-chain', regions: ['global'], tier: 'Premium', cashback: 'Up to 8%', cashbackToken: 'BGB', fxFee: '0%', annualFee: 'TBD', features: ['Premium tier', 'Higher cashback', 'Priority support', 'Exclusive perks'], perks: ['8% max cashback', 'VIP benefits', 'Premier status'], token: { ticker: 'BGB', live: true, cmc: 'bitget-token' }, website: 'https://www.bitget.com/cards/premier', platforms: 'both' },
+  { id: 129, name: 'Bitget Card', brand: 'Bitget', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9f76c4f9-1e82-4856-f4b2-b65b9333c500/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9f76c4f9-1e82-4856-f4b2-b65b9333c500/public', xHandle: 'bitget', showFrontTags: true, bg: 'from-[#00D6E0] to-[#00B8C2]', silverChip: true, network: 'Visa', category: 'exchange', archetype: 'exchange', custody: 'Custodial', chain: 'Multi-chain', regions: ['global'], tier: 'Standard', cashback: 'Up to 4%', cashbackToken: 'BGB', fxFee: '0%', annualFee: '$0', features: ['Crypto to fiat', 'BGB rewards', 'Global coverage', 'No fees'], perks: ['Fast growing exchange', 'Copy trading leader'], token: { ticker: 'BGB', live: true, cmc: 'bitget-token' }, website: 'https://www.bitget.com/cards', platforms: 'both' },
+  { id: 1291, name: 'Bitget Premier', brand: 'Bitget', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/49ba9d86-930d-4b9b-1056-e06c7a762100/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9f76c4f9-1e82-4856-f4b2-b65b9333c500/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/9f76c4f9-1e82-4856-f4b2-b65b9333c500/public', xHandle: 'bitget', showFrontTags: true, bg: 'from-gray-900 to-black', network: 'Visa', category: 'exchange', archetype: 'exchange', custody: 'Custodial', chain: 'Multi-chain', regions: ['global'], tier: 'Premium', cashback: 'Up to 8%', cashbackToken: 'BGB', fxFee: '0%', annualFee: 'TBD', features: ['Premium tier', 'Higher cashback', 'Priority support', 'Exclusive perks'], perks: ['8% max cashback', 'VIP benefits', 'Premier status'], token: { ticker: 'BGB', live: true, cmc: 'bitget-token' }, website: 'https://www.bitget.com/cards/premier', platforms: 'both' },
   { id: 130, name: 'COCA', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/67889ec8-ca0a-4ee1-2222-4934458d8400/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/0d3a20fd-fa1d-44a0-f115-b4bf1576d600/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/0d3a20fd-fa1d-44a0-f115-b4bf1576d600/public', invertLogo: true, xHandle: 'coca_wallet', showFrontTags: true, bg: 'from-[#2563EB] to-[#1D4ED8]', network: 'Mastercard', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: '0%', annualFee: 'TBD', features: ['Self-custody', 'Multi-chain', 'DeFi integration'], perks: ['Non-custodial', 'Web3 native'], website: 'https://www.coca.xyz/', platforms: 'both' },
   { id: 131, name: 'Brighty', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/2dd6a726-d935-49c8-9c3e-94a83e6e8800/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/204bfc5a-d20d-4ddf-6dff-c47d46882f00/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/204bfc5a-d20d-4ddf-6dff-c47d46882f00/public', xHandle: 'brightyapp', showFrontTags: true, bg: 'holographic', network: 'Visa', category: 'fintech', archetype: 'fintech', custody: 'Custodial', chain: 'Multi-chain', regions: ['europe'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: '0%', annualFee: 'TBD', features: ['Crypto spending', 'IBAN', 'Multi-currency'], perks: ['EU focused', 'Easy onboarding'], website: 'https://brighty.app', platforms: 'both' },
   { id: 132, name: 'Cypher', logo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/e1a07b4c-6567-46bb-741b-f9d73c658c00/public', brandLogo: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/e1a07b4c-6567-46bb-741b-f9d73c658c00/public', brandLogoBack: 'https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/e1a07b4c-6567-46bb-741b-f9d73c658c00/public', showBrandName: true, brandNameText: 'Cypher Card', xHandle: 'Cypher_HQ_', showFrontTags: true, bg: 'from-[#E5A835] to-[#D4962A]', network: 'Visa', category: 'onchain', archetype: 'wallet', custody: 'Non-Custodial', chain: 'Multi-chain', regions: ['global'], cashback: 'TBD', cashbackToken: 'TBD', fxFee: '0%', annualFee: 'TBD', features: ['Self-custody', 'Privacy focused', 'Multi-chain'], perks: ['Non-custodial', 'Privacy native'], website: 'https://cypher.com', platforms: 'both' },
@@ -608,7 +608,7 @@ const blogPosts = [
   }
 ];
 
-function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isInCompare = false, onCompareToggle }) {
+function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isInCompare = false, onCompareToggle, variantCount = 0 }) {
   const [flipped, setFlipped] = useState(false);
   const cardRating = ratings?.[card.id] || { average: 0, count: 0 };
   const hasUserRated = userRatedCards[card.id];
@@ -840,7 +840,7 @@ function Card({ card, ratings, onRate, darkMode = true, userRatedCards = {}, isI
               className="w-full mt-2 py-2 rounded-lg text-xs font-medium bg-gray-800 hover:bg-gray-700 text-gray-300 hover:text-white transition flex items-center justify-center gap-2"
             >
               <svg className="w-3.5 h-3.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
-              Learn More · Reviews · Ratings
+              {variantCount > 1 ? `${variantCount} Cards Available · Learn More` : 'Learn More · Reviews · Ratings'}
             </button>
             {/* Ask AI Widget */}
             <div className="mt-2">
@@ -2229,6 +2229,24 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
     });
   }
 
+  // Brand grouping: show only one card per brand on the homepage grid
+  const brandGroups = {};
+  filtered.forEach(c => {
+    if (c.brand) {
+      if (!brandGroups[c.brand]) brandGroups[c.brand] = [];
+      brandGroups[c.brand].push(c);
+    }
+  });
+
+  // Replace multi-card brands with just the first card
+  const seenBrands = new Set();
+  filtered = filtered.filter(c => {
+    if (!c.brand) return true;
+    if (seenBrands.has(c.brand)) return false;
+    seenBrands.add(c.brand);
+    return true;
+  });
+
   const clearFilters = () => { setCategoryFilter('all'); setCustodyFilter('all'); setNetworkFilter('all'); setRegionFilter('all'); setArchetypeFilter('all'); setPlatformFilter('all'); setRewardTypeFilter('all'); setRatingSort('none'); };
   const hasActiveFilters = categoryFilter !== 'all' || custodyFilter !== 'all' || networkFilter !== 'all' || regionFilter !== 'all' || archetypeFilter !== 'all' || platformFilter !== 'all' || rewardTypeFilter !== 'all' || ratingSort !== 'none' || effectiveSearch;
 
@@ -2369,7 +2387,7 @@ function CardsView({ darkMode, searchTerm, ratings, onRate, userRatedCards, comp
       </div>
 
       {/* CARDS GRID */}
-      <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">{visibleCards.map(card => <Card key={card.id} card={card} ratings={ratings} onRate={onRate} darkMode={darkMode} userRatedCards={userRatedCards} isInCompare={compareList?.some(c => c.id === card.id)} onCompareToggle={onCompareToggle} />)}</div>
+      <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">{visibleCards.map(card => <Card key={card.id} card={card} ratings={ratings} onRate={onRate} darkMode={darkMode} userRatedCards={userRatedCards} isInCompare={compareList?.some(c => c.id === card.id)} onCompareToggle={onCompareToggle} variantCount={card.brand && brandGroups[card.brand] ? brandGroups[card.brand].length : 0} />)}</div>
 
       {/* Show More / Pagination */}
       {filtered.length > 0 && (
@@ -3578,10 +3596,11 @@ function CardDetailPage({ card, darkMode, ratings, userRatedCards, onRate, onBac
   // Get reviews for this card
   const cardReviews = cardReviewsData[card.name] || { trustpilot: [], appStore: [] };
 
-  // Card navigation (prev/next)
-  const currentIndex = allCards ? allCards.findIndex(c => c.id === card.id) : -1;
-  const prevCard = allCards && currentIndex > 0 ? allCards[currentIndex - 1] : null;
-  const nextCard = allCards && currentIndex < (allCards || []).length - 1 ? allCards[currentIndex + 1] : null;
+  // Card navigation (prev/next) — for branded cards, cycle through brand siblings only
+  const navCards = card.brand && allCards ? allCards.filter(c => c.brand === card.brand) : allCards;
+  const currentIndex = navCards ? navCards.findIndex(c => c.id === card.id) : -1;
+  const prevCard = navCards && currentIndex > 0 ? navCards[currentIndex - 1] : null;
+  const nextCard = navCards && currentIndex < (navCards || []).length - 1 ? navCards[currentIndex + 1] : null;
 
   // Touch swipe support
   const touchStartX = React.useRef(null);
@@ -3675,10 +3694,10 @@ function CardDetailPage({ card, darkMode, ratings, userRatedCards, onRate, onBac
         </button>
 
         {/* Card counter and peek navigation */}
-        {allCards && allCards.length > 1 && (
+        {navCards && navCards.length > 1 && (
           <div className="flex items-center justify-between mb-4">
             <span className={`text-xs ${darkMode ? 'text-gray-500' : 'text-gray-400'}`}>
-              {currentIndex + 1} of {allCards.length}
+              {currentIndex + 1} of {navCards.length}{card.brand ? ` ${card.brand} cards` : ''}
             </span>
             <div className={`text-xs ${darkMode ? 'text-gray-500' : 'text-gray-400'}`}>
               {prevCard && <button onClick={() => onNavigateToCard(prevCard)} className="hover:text-lime-400 transition">← {prevCard.name}</button>}
